<resources>
    <string name="app_name">SiCalor</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_web_client_id">641382458719-pla16438ghq5mdn4s7v4blarga37vf1p.apps.googleusercontent.com</string>

    <string name="onboarding_title_1">Welcome</string>
    <string name="onboarding_desc_1">Welcome to SiCalor, start a new lifestyle</string>

    <string name="onboarding_title_2">Scan Your Food</string>
    <string name="onboarding_desc_2">Use the scanning feature to analyze your food</string>

    <string name="onboarding_title_3">Discover Daily Calorie</string>
    <string name="onboarding_desc_3">Discover your daily calorie by filling out your profile</string>

    <string name="onboarding_title_4">Track Your Progress</string>
    <string name="onboarding_desc_4">Monitor your daily calorie intake and stay on track with your health goals</string>

    <string name="wrong_format_name">Format name is wrong</string>
    <string name="wrong_format_num">Input cannot be minus</string>

    <string name="notification_title">SiCalor</string>
    <string name="notification_message">Kalorimu hari ini sudah terpenuhi!</string>
    <string name="notification_subtext">Reminder</string>

    <string name="dialog_title_1">Mengapa Kalori Itu Penting?</string>
    <string name="dialog_desc_1">Kalori adalah satuan energi yang dibutuhkan tubuh untuk berfungsi. Jumlah kalori yang kamu konsumsi memengaruhi berat badan, energi harian, dan kesehatan secara keseluruhan. Mengetahui kebutuhan kalori membantu kamu menjaga keseimbangan antara asupan dan aktivitas.</string>

    <string name="dialog_title_2">Faktor-Faktor Penentu Kebutuhan Kalori</string>
    <string name="dialog_desc_2">Perhitungan kalori didasarkan pada tinggi badan, berat badan, usia, dan tingkat aktivitas harianmu. Semua faktor ini mempengaruhi berapa banyak energi yang dibutuhkan tubuh untuk bekerja secara optimal. Data ini digunakan untuk menghitung BMR dan Total Energy Expenditure (TEE).</string>

    <string name="dialog_title_3">Pentingnya Pola Makan Sehat</string>
    <string name="dialog_desc_3">Pola makan sehat tidak hanya soal jumlah kalori, tapi juga kualitas nutrisi. Kombinasi yang tepat antara karbohidrat, protein, lemak, vitamin, dan mineral sangat penting untuk menjaga kesehatan, daya tahan tubuh, dan mencegah berbagai penyakit kronis.</string>

    <string name="dialog_title_4">Mulai Langkah Sehatmu Hari Ini</string>
    <string name="dialog_desc_4">Yuk, mulai perjalananmu menuju hidup sehat! Dengan mengetahui kebutuhan kalori dan menjaga pola makan yang tepat, kamu bisa mencapai gaya hidup yang seimbang, penuh energi, dan lebih produktif setiap hari.</string>

    <string name="content_title_1">✅ 1. Pastikan Makanan Terlihat Jelas</string>
    <string name="content_title_2">✅ 2. Gunakan Pencahayaan yang Cukup</string>
    <string name="content_title_3">✅ 3. Jarak Ideal Pemotretan</string>
    <string name="content_title_4">✅ 4. Fokuskan Kamera</string>
    <string name="content_title_5">✅ 5. Perlu Diketahui</string>

    <string name="content_desc_1">Hindari piring yang terlalu ramai. Usahakan makanan utama yang ingin dipindai berada di tengah dan terlihat utuh.</string>
    <string name="content_desc_2">Scan di tempat terang. Hindari bayangan atau kondisi gelap karena dapat mengurangi akurasi pemindaian.</string>
    <string name="content_desc_3">Pegang kamera sekitar 20–30 cm dari makanan. Jangan terlalu dekat atau terlalu jauh agar makanan terdeteksi dengan baik.</string>
    <string name="content_desc_4">Pastikan kamera sudah fokus sebelum menekan tombol capture, agar hasil gambar lebih tajam.</string>
    <string name="content_desc_5">Saat ini, fitur pemindaian masih mendukung 10 jenis makanan, yaitu:</string>

    <string name="list_item_1">🍽️ Nasi Putih</string>
    <string name="list_item_2">🍽️ Jagung Rebus</string>
    <string name="list_item_3">🍽️ Ayam Goreng Paha</string>
    <string name="list_item_4">🍽️ Telur Ayam Rebus</string>
    <string name="list_item_5">🍽️ Tempe Goreng</string>
    <string name="list_item_6">🍽️ Tahu Goreng</string>
    <string name="list_item_7">🍽️ Tumis Kangkung</string>
    <string name="list_item_8">🍽️ Bening Bayam</string>
    <string name="list_item_9">🍽️ Buah Pisang</string>
    <string name="list_item_10">🍽️ Buah Pisang</string>
</resources>