<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".ui.fragment.InfoSlideFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="36dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:cardCornerRadius="16dp">

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutDescription="@xml/fragment_info_slide_xml_constraintlayout_scene">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:theme="@style/Theme.AppCompat.Light"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_close_white"
                app:tint="@color/colorPrimary" />

            <ImageView
                android:id="@+id/logoMenu1"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="76dp"
                android:src="@drawable/image_dialog_1"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/titleMenu1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center_horizontal"
                android:text="@string/dialog_title_1"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/logoMenu1"
                app:layout_constraintStart_toStartOf="@+id/logoMenu1"
                app:layout_constraintTop_toBottomOf="@+id/logoMenu1" />

            <TextView
                android:id="@+id/descMenu1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_horizontal"
                android:text="@string/dialog_desc_1"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/titleMenu1"
                app:layout_constraintStart_toStartOf="@+id/titleMenu1"
                app:layout_constraintTop_toBottomOf="@+id/titleMenu1" />

            <ImageView
                android:id="@+id/logoMenu2"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="76dp"
                android:src="@drawable/image_dialog_2"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/titleMenu2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center_horizontal"
                android:text="@string/dialog_title_2"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/logoMenu2"
                app:layout_constraintStart_toStartOf="@+id/logoMenu2"
                app:layout_constraintTop_toBottomOf="@+id/logoMenu2" />

            <TextView
                android:id="@+id/descMenu2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_horizontal"
                android:text="@string/dialog_desc_2"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/titleMenu2"
                app:layout_constraintStart_toStartOf="@+id/titleMenu2"
                app:layout_constraintTop_toBottomOf="@+id/titleMenu2" />

            <ImageView
                android:id="@+id/logoMenu3"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="76dp"
                android:src="@drawable/image_dialog_3"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/titleMenu3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center_horizontal"
                android:text="@string/dialog_title_3"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/logoMenu3"
                app:layout_constraintStart_toStartOf="@+id/logoMenu3"
                app:layout_constraintTop_toBottomOf="@+id/logoMenu3" />

            <TextView
                android:id="@+id/descMenu3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_horizontal"
                android:text="@string/dialog_desc_3"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/titleMenu3"
                app:layout_constraintStart_toStartOf="@+id/titleMenu3"
                app:layout_constraintTop_toBottomOf="@+id/titleMenu3" />

            <ImageView
                android:id="@+id/logoMenu4"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="76dp"
                android:src="@drawable/image_dialog_4"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/titleMenu4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center_horizontal"
                android:text="@string/dialog_title_4"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/logoMenu4"
                app:layout_constraintStart_toStartOf="@+id/logoMenu4"
                app:layout_constraintTop_toBottomOf="@+id/logoMenu4" />

            <TextView
                android:id="@+id/descMenu4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_horizontal"
                android:text="@string/dialog_desc_4"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/titleMenu4"
                app:layout_constraintStart_toStartOf="@+id/titleMenu4"
                app:layout_constraintTop_toBottomOf="@+id/titleMenu4" />

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/menu1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="92dp"
                app:altSrc="@drawable/ic_circle_full_24"
                app:layout_constraintEnd_toStartOf="@+id/menu2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:srcCompat="@drawable/ic_circle_24"
                app:tint="@color/colorPrimary" />

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/menu2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:altSrc="@drawable/ic_circle_full_24"
                app:layout_constraintBottom_toBottomOf="@+id/menu1"
                app:layout_constraintEnd_toStartOf="@+id/menu3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/menu1"
                app:layout_constraintTop_toTopOf="@+id/menu1"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_circle_24"
                app:tint="@color/colorPrimary" />

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/menu3"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:altSrc="@drawable/ic_circle_full_24"
                app:layout_constraintBottom_toBottomOf="@+id/menu2"
                app:layout_constraintEnd_toStartOf="@+id/menu4"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/menu2"
                app:layout_constraintTop_toTopOf="@+id/menu2"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_circle_24"
                app:tint="@color/colorPrimary" />

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/menu4"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="92dp"
                app:altSrc="@drawable/ic_circle_full_24"
                app:layout_constraintBottom_toBottomOf="@+id/menu3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/menu3"
                app:layout_constraintTop_toTopOf="@+id/menu3"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_circle_24"
                app:tint="@color/colorPrimary" />

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="60dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/image_sicalor" />
        </androidx.constraintlayout.motion.widget.MotionLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>